--- a/amezone.css
+++ b/amezone.css
@@ -4,6 +4,7 @@
   border: border-box;
 }
 .navbar{
+  width: 766px;
   height: 45px;
   background-color: black;
   color: white;
@@ -83,6 +84,7 @@ border: none;
   font-size: 15px;
 }
 .menu{
+  width: 766px;
   display: flex;
   align-items: center;
   justify-content:  space-evenly;
@@ -91,6 +93,20 @@ border: none;
   height: 35px;
 }
 .allp{
+  width: 60%;
   display: flex;
   justify-content: space-evenly;
+  font-size: 0.7rem;
+}
+.hero{
+  height: 250px;
+  width: 766px;
+  background-image: url('/MOB-HEDAER-GIF.gif');
+  background-size: cover;
+}
+.hero2{
+    height: 220px;
+  width: 766px;
+  background-size: cover;
+  background-image: url('/Reverse_ingress_mob.jpg');
 }
